versioned_docs/version-22.04/installation/installation-of-a-central-server/unattended.md
---
id: unattended-install-central
title: Unattended installation of a central server
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

To install a central server quicker, you can use a script. This will carry out the full installation procedure, including the web installation.

## Installation procedure

1. Update your system:

<Tabs groupId="sync">
<TabItem value="RHEL 8" label="RHEL 8">

```shell
dnf update
subscription-manager register --username my_username --password my_password --auto-attach --force
subscription-manager repos --enable codeready-builder-for-rhel-8-x86_64-rpms
```

> Replace **my_username** and **my_password** with the credentials of your RedHat account.

</TabItem>

<TabItem value="Alma / Oracle Linux 8" label="Alma / Oracle Linux 8">

```shell
dnf update
```

</TabItem>
<TabItem value="RHEL 9" label="RHEL 9">

```shell
dnf update
subscription-manager register --username my_username --password my_password --auto-attach --force
subscription-manager repos --enable codeready-builder-for-rhel-9-x86_64-rpms
```

</TabItem>
<TabItem value="Alma / Oracle Linux 9" label="Alma / Oracle Linux 9">

```shell
dnf update
```

</TabItem>
<TabItem value="Debian 11" label="Debian 11">

```shell
apt update && apt upgrade
```

</TabItem>
</Tabs>

2. Download the script using the following command:

```shell
curl -L https://raw.githubusercontent.com/centreon/centreon/22.04.x/centreon/unattended.sh --output /tmp/unattended.sh
```

3. Run the following command as **root**:

* To specify the password for the default **admin** account:

```shell
bash /tmp/unattended.sh install -t central -v 22.04 -r stable -s -p <admin_password> -l DEBUG  2>&1 |tee -a /tmp/unattended-$(date +"%m-%d-%Y-%H%M%S").log
```

* To get an autogenerated password for the default **admin** account (the script will tell you where the password is stored):

```shell
bash /tmp/unattended.sh install -t central -v 22.04 -r stable -s -l DEBUG  2>&1 |tee -a /tmp/unattended-$(date +"%m-%d-%Y-%H%M%S").log
```

In both cases, you will get a full log file with all errors in your **tmp** folder, named **unattended(date).log**.

## Help

To get help on the script, use the following command:

```shell
bash unattended.sh -h
```
